# qDbus

./: CMakeLists.txt
client/: CMakeLists.txt  caller.cpp  caller.h  main.cpp
server/: CMakeLists.txt  main.cpp  person.cpp  person.h
